--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-ga": "^2.5.3",
+    "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
