Add modal images; Fix line height

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.6.3",
     "react-ga": "^2.5.6",
     "react-loader-spinner": "^2.3.0",
+    "react-modal-image": "^2.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
   },
