--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "modules-repo-prototype",
-  "version": "0.1.0",
+  "name": "biblequote.org",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-ga": "^2.5.6",
     "react-loader-spinner": "^2.3.0",
     "react-modal-image": "^2.3.1",
