--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-loader-spinner": "^2.3.0",
     "react-modal-image": "^2.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "react-youtube": "^7.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
