Fix 404 routing error

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "biblequote.org",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://biblequote.github.io",
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
