--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "react-loader-spinner": "^2.3.0",
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.4.1",
     "react-youtube": "^7.11.2"
   },
   "scripts": {
@@ -24,5 +23,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-scripts": "^5.0.0"
+  }
 }
